solved the issue with no possible to POST, GET from other PCs from the local network, added logging the IP addresses of machines which GET, POST,... are done from